--- a/front-end/safehome-frontend/src/app/components/morador/morador.component.html
+++ b/front-end/safehome-frontend/src/app/components/morador/morador.component.html
@@ -9,12 +9,11 @@
     <input type="text" placeholder="Cidade" class="form-control" name="cidade" [(ngModel)]="morador.cidade">
     <input type="text" placeholder="UF" class="form-control" name="uf" [(ngModel)]="morador.uf">
 
-    <input type="button" value="Cadastrar" *ngIf="btnCadastro" class="btn btn-primary">
+    <input type="button" value="Cadastrar" *ngIf="btnCadastro" class="btn btn-primary" (click)="cadastrar()">
     <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning">
     <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger">
     <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary">
 
-    <h1>{{morador | json}}</h1>
 
     <table class="table">
         <thead>
