--- a/front-end/safehome-frontend/src/app/app.component.html
+++ b/front-end/safehome-frontend/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-principal></app-principal>
-<app-morador></app-morador>
+
+<div class="container">
+    <app-morador></app-morador>
+    <app-visitante></app-visitante>
+</div>
