--- a/front-end/safehome-frontend/src/app/components/morador/morador.component.html
+++ b/front-end/safehome-frontend/src/app/components/morador/morador.component.html
@@ -21,7 +21,7 @@
         <input type="text" placeholder="UF" class="form-control" name="uf" [(ngModel)]="morador.uf">
 
         <input type="button" value="Cadastrar" *ngIf="btnCadastro" class="btn btn-primary" (click)="cadastrar()">
-        <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning">
+        <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning" (click)="editar()">
         <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger">
         <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary">
     </fieldset>
