--- a/front-end/safehome-frontend/src/app/components/visitante/visitante.component.html
+++ b/front-end/safehome-frontend/src/app/components/visitante/visitante.component.html
@@ -27,8 +27,8 @@
             </fieldset>
 
             <input type="button" value="Cadastrar" *ngIf="btnCadastro" class="btn btn-primary" (click)="cadastrar()">
-            <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning">
-            <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger">
+            <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning" (click)="editarVisitante()">
+            <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger" (click)="removerVisitante()">
             <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary">
         </fieldset>
 
